--- a/.github/workflows/ReleaseBuilds.yml
+++ b/.github/workflows/ReleaseBuilds.yml
@@ -3,7 +3,7 @@ name: Make Release Builds
 on: [workflow_dispatch]
 
 jobs:
-  build-macos:
+  build-macos-universal:
     runs-on: macos-12
     timeout-minutes: 15
     steps:
@@ -15,9 +15,70 @@ jobs:
         with:
           xcode-version: 13
 
-      - run: bash build-mac-app.sh
+      - run: ./build-mac-app.sh
 
       - uses: actions/upload-artifact@v4
         with:
-          name: mac-build
+          name: mac-build-universal
           path: SpaceCadetPinball-*-mac.dmg
+
+  build-linux-appimage-x86_64:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: master
+
+      - run: |
+          sudo apt update
+          sudo apt install -y desktop-file-utils libsdl2-dev libsdl2-mixer-dev
+
+      - run: ./build-linux-app.sh
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: linux-build-x86_64
+          path: SpaceCadetPinball-*-linux-x86_64.AppImage
+
+  build-linux-appimage-aarch64:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: master
+
+      - run: mkdir -p artifacts
+
+      - uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: aarch64
+          distro: ubuntu20.04
+          githubToken: ${{ github.token }}
+
+          dockerRunArgs: --volume "${PWD}/artifacts:/artifacts"
+
+          install: |
+            apt update
+            apt install -y build-essential cmake curl libsdl2-dev libsdl2-mixer-dev
+
+          run: ./build-linux-app.sh --prepare-github-actions
+
+      - run: |
+          sudo apt update
+          sudo apt install -y desktop-file-utils
+
+          cd artifacts
+
+          archive_file="$(echo SpaceCadetPinball-*-linux-aarch64.tar)"
+          appimage_file="${archive_file%.*}.AppImage"
+
+          tar xf "$archive_file"
+
+          ./appimagetool-x86_64.AppImage --runtime-file runtime-aarch64 --no-appstream SpaceCadetPinball.AppDir "$appimage_file"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: linux-build-aarch64
+          path: artifacts/SpaceCadetPinball-*-linux-aarch64.AppImage
