--- a/.github/workflows/ReleaseBuilds.yml
+++ b/.github/workflows/ReleaseBuilds.yml
@@ -3,55 +3,106 @@ name: Make Release Builds
 on: [workflow_dispatch]
 
 jobs:
+  create-new-release:
+    runs-on: ubuntu-22.04
+    timeout-minutes: 5
+
+    permissions:
+      contents: write
+
+    steps:
+      - name: Set release tag and create (empty) release
+        id: set-release-tag
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          repo_tags="$(gh api \
+              -H "Accept: application/vnd.github+json" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              /repos/${{ github.repository }}/tags)"
+
+          latest_tag="$(jq -r '.[0].name' <<< "$repo_tags")"
+          today="$(date +"%Y%m%d")"
+
+          if [ "${latest_tag::-2}" = "$today" ]; then
+              new_tag="$((latest_tag+1))"
+          else
+              new_tag="${today}00"
+          fi
+
+          gh release create "$new_tag"
+          echo "NEW_TAG=$new_tag" >> "$GITHUB_OUTPUT"
+
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build-macos-universal:
+    needs: create-new-release
     runs-on: macos-13
     timeout-minutes: 15
+
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
         with:
           ref: master
 
-      - run: ./build-mac-app.sh
+      - name: Compile macOS universal app and upload file to release
+        run: |
+          ./build-mac-app.sh
+          gh release upload "$NEW_TAG" SpaceCadetPinball-*-mac.dmg
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: mac-build-universal
-          path: SpaceCadetPinball-*-mac.dmg
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NEW_TAG: ${{ steps.set-release-tag.outputs.NEW_TAG }}
 
   build-linux-appimage-x86_64:
+    needs: create-new-release
     runs-on: ubuntu-22.04
     timeout-minutes: 15
+
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
         with:
           ref: master
 
-      - run: |
+      - name: Compile Linux x86_64 app and upload file to release
+        run: |
           sudo apt update
           sudo apt install -y desktop-file-utils libsdl2-dev libsdl2-mixer-dev
+          ./build-linux-app.sh
+          gh release upload "$NEW_TAG" SpaceCadetPinball-*-linux-x86_64.AppImage
 
-      - run: ./build-linux-app.sh
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: linux-build-x86_64
-          path: SpaceCadetPinball-*-linux-x86_64.AppImage
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NEW_TAG: ${{ steps.set-release-tag.outputs.NEW_TAG }}
 
   build-linux-appimage-aarch64:
+    needs: create-new-release
     runs-on: ubuntu-22.04-arm
     timeout-minutes: 15
+
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
         with:
           ref: master
 
-      - run: |
+      - name: Compile Linux aarch64 app and upload file to release
+        run: |
           sudo apt update
           sudo apt install -y desktop-file-utils libsdl2-dev libsdl2-mixer-dev
+          ./build-linux-app.sh
+          gh release upload "$NEW_TAG" SpaceCadetPinball-*-linux-aarch64.AppImage
 
-      - run: ./build-linux-app.sh
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: linux-build-aarch64
-          path: SpaceCadetPinball-*-linux-aarch64.AppImage
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NEW_TAG: ${{ steps.set-release-tag.outputs.NEW_TAG }}
