--- a/.github/workflows/ReleaseBuilds.yml
+++ b/.github/workflows/ReleaseBuilds.yml
@@ -11,6 +11,10 @@ jobs:
       contents: write
 
     steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: master
+
       - name: Set release tag and create (empty) release
         id: set-release-tag
         shell: bash
