--- a/.github/workflows/ReleaseBuilds.yml
+++ b/.github/workflows/ReleaseBuilds.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Compile macOS universal app and upload file to release
         run: |
           ./build-mac-app.sh
+          openssl sha256 SpaceCadetPinball-*-mac.dmg
           gh release upload "$NEW_TAG" SpaceCadetPinball-*-mac.dmg
 
         env:
@@ -85,6 +86,7 @@ jobs:
           sudo apt update
           sudo apt install -y desktop-file-utils libsdl2-dev libsdl2-mixer-dev
           ./build-linux-app.sh
+          openssl sha256 SpaceCadetPinball-*-linux-x86_64.AppImage
           gh release upload "$NEW_TAG" SpaceCadetPinball-*-linux-x86_64.AppImage
 
         env:
@@ -109,6 +111,7 @@ jobs:
           sudo apt update
           sudo apt install -y desktop-file-utils libsdl2-dev libsdl2-mixer-dev
           ./build-linux-app.sh
+          openssl sha256 SpaceCadetPinball-*-linux-aarch64.AppImage
           gh release upload "$NEW_TAG" SpaceCadetPinball-*-linux-aarch64.AppImage
 
         env:
